Updated to add tests for configuartion

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Supabase Configuration (Required)
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_KEY=your-service-key-here
+SUPABASE_KEY=your-service-key-here
+# Alternative naming (both supported):
+# SUPABASE_SERVICE_KEY=your-service-key-here
 
 # Ollama Configuration (Required)
 OLLAMA_BASE_URL=http://localhost:11434
@@ -27,3 +29,7 @@ LOG_LEVEL=INFO
 LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 LOG_DATE_FORMAT=%Y-%m-%d %H:%M:%S
 # LOG_FILE=app.log
+
+# Additional project-specific settings (not used by config system yet)
+# VECTOR_TABLE_NAME=documents
+# VECTOR_DIMENSION=768
