--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 # Core dependencies for configuration management
 python-dotenv>=1.0.0
 
+# Testing dependencies
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
+numpy>=1.24.0
+
 # Future dependencies (commented out for now)
 # supabase>=2.0.0
 # httpx>=0.25.0
