--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ pytest>=7.0.0
 pytest-asyncio>=0.21.0
 numpy>=1.24.0
 
+# Supabase client for live testing
+supabase>=2.0.0
+httpx>=0.25.0
+
 # Future dependencies (commented out for now)
-# supabase>=2.0.0
-# httpx>=0.25.0
 # click>=8.0.0
