Updated tests to be more robust

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ markers =
     unit: marks tests as unit tests
     integration: marks tests as integration tests
     slow: marks tests as slow running
+    smoke: marks tests as smoke tests (quick validation)
 
 # Default test discovery
 testpaths = tests
@@ -17,7 +18,23 @@ addopts =
     --tb=short
     --strict-markers
     --disable-warnings
+    --color=yes
 
 # Async test configuration
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+
+# Coverage configuration
+[tool:coverage:run]
+source = src
+omit = 
+    */tests/*
+    */venv/*
+    */__pycache__/*
+
+[tool:coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
