--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Core dependencies for configuration management
 python-dotenv>=1.0.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
 # Testing dependencies
 pytest>=7.0.0
