Simplified config and updated tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 markers =
     live: marks tests as live integration tests that connect to real Supabase (deselect with '-m "not live"')
     unit: marks tests as unit tests
