Simplified testing architecture

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,40 +1,17 @@
-[pytest]
-markers =
-    live: marks tests as live integration tests that connect to real Supabase (deselect with '-m "not live"')
-    unit: marks tests as unit tests
-    integration: marks tests as integration tests
-    slow: marks tests as slow running
-    smoke: marks tests as smoke tests (quick validation)
-
-# Default test discovery
+[tool:pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-
-# Output options
 addopts = 
     -v
     --tb=short
     --strict-markers
     --disable-warnings
-    --color=yes
-
-# Async test configuration
-asyncio_mode = auto
-asyncio_default_fixture_loop_scope = function
-
-# Coverage configuration
-[tool:coverage:run]
-source = src
-omit = 
-    */tests/*
-    */venv/*
-    */__pycache__/*
-
-[tool:coverage:report]
-exclude_lines =
-    pragma: no cover
-    def __repr__
-    raise AssertionError
-    raise NotImplementedError
+markers =
+    unit: Unit tests (fast, no external dependencies)
+    integration: Integration tests (require external services)
+    live: Live tests (require real Supabase/Ollama services)
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
